--- a/content/resources/1-224jf03.md
+++ b/content/resources/1-224jf03.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/1-224j-carrier-systems-fall-2003/ac46175ca6bf59bd6e6a5d431ce53594_1-224jf03.jpg
+file: /media/courses/1-224j-carrier-systems-fall-2003/ac46175ca6bf59bd6e6a5d431ce53594_1-224jf03.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of [United States Department
     of Agriculture](http://www.usda.gov).)
   credit: ''
   image-alt: Black and white photo of a ship at an iron ore docks.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 1-224jf03.jpg
 uid: ac46175c-a6bf-59bd-6e6a-5d431ce53594
