--- a/content/resources/ps1_2003.md
+++ b/content/resources/ps1_2003.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Adapted from Introduction to Optimization , Bertsimas, Tsitsiklis pb
   5.7
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/1-224j-carrier-systems-fall-2003/238170a336cc5b8505b5e9e30fe7f4a3_ps1_2003.pdf
+file: /media/courses/1-224j-carrier-systems-fall-2003/238170a336cc5b8505b5e9e30fe7f4a3_ps1_2003.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: ps1_2003.pdf
 uid: 238170a3-36cc-5b85-05b5-e9e30fe7f4a3
