--- a/content/resources/ps3_2003.md
+++ b/content/resources/ps3_2003.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/1-224j-carrier-systems-fall-2003/e9710a16b534e576fc938396b328044a_ps3_2003.pdf
+file: /media/courses/1-224j-carrier-systems-fall-2003/e9710a16b534e576fc938396b328044a_ps3_2003.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: ps3_2003.pdf
 uid: e9710a16-b534-e576-fc93-8396b328044a
