Sync all content

--- a/content/resources/ps1_2003.md
+++ b/content/resources/ps1_2003.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 96dab925-6ea3-635e-af0b-1ef5d3c4bfaa
 resourcetype: Document
 title: ps1_2003.pdf
 uid: 238170a3-36cc-5b85-05b5-e9e30fe7f4a3
