--- a/content/resources/ps2_2003.md
+++ b/content/resources/ps2_2003.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 96dab925-6ea3-635e-af0b-1ef5d3c4bfaa
 resourcetype: Document
 title: ps2_2003.pdf
 uid: 3ebe7d34-9faa-5487-4c54-84e35c6a6fb2
