--- a/content/resources/ps3_2003.md
+++ b/content/resources/ps3_2003.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 96dab925-6ea3-635e-af0b-1ef5d3c4bfaa
 resourcetype: Document
 title: ps3_2003.pdf
 uid: e9710a16-b534-e576-fc93-8396b328044a
