--- a/content/resources/ps4_2003.md
+++ b/content/resources/ps4_2003.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 96dab925-6ea3-635e-af0b-1ef5d3c4bfaa
 resourcetype: Document
 title: ps4_2003.pdf
 uid: 6822a2e1-087a-74aa-c7da-450e38e6dc91
