Sync all content

--- a/content/resources/1-224jf03-th.md
+++ b/content/resources/1-224jf03-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/1-224j-carrier-systems-fall-2003/0d0705d62003b59c5dd9eca1fb1add2c_1-224jf03-th.jpg
+file: /courses/1-224j-carrier-systems-fall-2003/0d0705d62003b59c5dd9eca1fb1add2c_1-224jf03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of [United States Department
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Black and white photo of a ship at an iron ore docks.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 1-224jf03-th.jpg
