--- a/content/resources/ps1_2003.md
+++ b/content/resources/ps1_2003.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: Adapted from Introduction to Optimization , Bertsimas, Tsitsiklis pb
   5.7
-file: /media/courses/1-224j-carrier-systems-fall-2003/238170a336cc5b8505b5e9e30fe7f4a3_ps1_2003.pdf
+file: /courses/1-224j-carrier-systems-fall-2003/238170a336cc5b8505b5e9e30fe7f4a3_ps1_2003.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: ps1_2003.pdf
 uid: 238170a3-36cc-5b85-05b5-e9e30fe7f4a3
 ---
+Adapted from Introduction to Optimization , Bertsimas, Tsitsiklis pb 5.7
