--- a/content/resources/ps3_2003.md
+++ b/content/resources/ps3_2003.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/1-224j-carrier-systems-fall-2003/e9710a16b534e576fc938396b328044a_ps3_2003.pdf
+file: /courses/1-224j-carrier-systems-fall-2003/e9710a16b534e576fc938396b328044a_ps3_2003.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
