Sync all content

--- a/content/resources/ps1_2003.md
+++ b/content/resources/ps1_2003.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Adapted from Introduction to Optimization , Bertsimas, Tsitsiklis pb
   5.7
 file: /courses/1-224j-carrier-systems-fall-2003/238170a336cc5b8505b5e9e30fe7f4a3_ps1_2003.pdf
+file_size: 78427
 file_type: application/pdf
 learning_resource_types:
 - Assignments
