--- a/content/resources/ps3_2003.md
+++ b/content/resources/ps3_2003.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/1-224j-carrier-systems-fall-2003/e9710a16b534e576fc938396b328044a_ps3_2003.pdf
+file_size: 92072
 file_type: application/pdf
 learning_resource_types:
 - Assignments
