--- a/content/resources/1-224jf03-th.md
+++ b/content/resources/1-224jf03-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/1-224j-carrier-systems-fall-2003/0d0705d62003b59c5dd9eca1fb1add2c_1-224jf03-th.jpg
+file_size: 8414
 file_type: image/jpeg
 image_metadata:
   caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of [United States Department
