--- a/content/resources/1-224jf03.md
+++ b/content/resources/1-224jf03.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/1-224j-carrier-systems-fall-2003/ac46175ca6bf59bd6e6a5d431ce53594_1-224jf03.jpg
+file_size: 60414
 file_type: image/jpeg
 image_metadata:
   caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of [United States Department
