--- a/content/resources/ps2_2003.md
+++ b/content/resources/ps2_2003.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/1-224j-carrier-systems-fall-2003/3ebe7d349faa54874c5484e35c6a6fb2_ps2_2003.pdf
+file_size: 134456
 file_type: application/pdf
 learning_resource_types:
 - Assignments
