--- a/content/resources/ps4_2003.md
+++ b/content/resources/ps4_2003.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/1-224j-carrier-systems-fall-2003/6822a2e1087a74aac7da450e38e6dc91_ps4_2003.pdf
+file_size: 150492
 file_type: application/pdf
 learning_resource_types:
 - Assignments
