Sync all content

--- a/content/resources/1-224jf03.md
+++ b/content/resources/1-224jf03.md
@@ -5,8 +5,9 @@ file: /ol-ocw-studio-app/courses/1-224j-carrier-systems-fall-2003/ac46175ca6bf59
 file_size: 60414
 file_type: image/jpeg
 image_metadata:
-  caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of [United States Department
-    of Agriculture](http://www.usda.gov).)
+  caption: Iron ore docks, Allouez, Wisconsin. (Image courtesy of {{% resource_link
+    "066fc96f-4b8c-48f4-894f-bce16454f9a6" "United States Department of Agriculture"
+    %}}.)
   credit: ''
   image-alt: Black and white photo of a ship at an iron ore docks.
 learning_resource_types: []
